# rust-example-restful

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2022-12-29-034802_create-table-accounts/: up.sql
migrations/2022-12-29-085633_create-table-roles/: up.sql
migrations/2022-12-29-085642_create-table-account-credentials/: down.sql  up.sql
migrations/2022-12-29-102516_create-table-sessions/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: app.rs
src/controllers/: main.rs  mod.rs
src/controllers/accounts/: create.rs  delete.rs  detail.rs  list.rs  mod.rs  update.rs
src/db/: account.rs  connector.rs  mod.rs  role.rs
